Fix feat img alignment.

--- a/src/themes/ftech-2018/assets/css/_section-blog.scss
+++ b/src/themes/ftech-2018/assets/css/_section-blog.scss
@@ -31,7 +31,8 @@ main.single{
 	}
 
 	img.feature{
-		margin-top: 20px;
+		display: block;
+		margin: 20px auto 50px;
 	}
 
 	footer{
